# flashfold

./: .gitignore  CHANGELOG.md  LICENSE  README.md  database.json  environment.yml  install.sh  pyproject.toml  setup.py
.github/workflows/: linux-python-package-conda.yml  macos-python-package-conda.yml  python-package-conda.yml  testing-on-linux.yml
envs/: linux-environment.yml  mac-environment.yml  mac-intel-environment.yml  mac-silicon-environment.yml
flashfold/: __init__.py  main.py
flashfold/extra/: __init__.py  complex_scoring.py  create_protein_db.py  download_from_ncbi.py  get_cog_db_assembly.py  install.py  mpdockq_scoring.py  pdockq_v2.py  select_refseq_assembly.py
flashfold/scripts/: __init__.py  create_sequence_db_from_gb.py  download_ncbi_assembly.py  download_rep_db.py  download_sequence_db.py  extend_main_sequence_db.py  generate_report.py  predict_structure.py
flashfold/tools/: msa_to_json.py  reformat_msa.py  workflow.py
flashfold/utils/: __init__.py  alignment.py  database.py  deduplicate.py  download.py  execute.py  json.py  output.py  reformat.py  scoring.py  sequence.py  structure.py  util.py
flashfold/utils/static/: scripts.js  style.css
install/: install_linux.sh  install_mac.sh
src/flashfold/: main.py
src/flashfold/extra/: create_query_fasta_from_stringdb.py
src/flashfold/scripts/: __init__.py  download_rep_db.py
src/flashfold/utils/: alignment.py  download.py  json.py
test/: test_flashfold.py
test/input/fasta/: heterodimer.fasta  heterotrimer.fasta  homodimer.fasta  monomer.fasta  monomer_dna.fasta
test/input/msa/: heterodimer.a3m  monomer.a3m
test/input/others/: assembly_accessions.txt
