[tool.poetry]
name = "flashfold"
version = "1.1.3"
description = "A tool for protein and protein complex structure prediction."
repository = "https://github.com/chayan7/flashfold"
authors = ["chayan7 <chayan_saha@outlook.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]

classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Unix Shell",
    "Development Status :: 4 - Beta",
]

[tool.poetry.scripts]
flashfold = "flashfold.main:main"

[tool.mypy]
disable_error_code = ["import-untyped"]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "primary"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chayan7/flashfold/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
